this commit made the home page responsive and corrected some content overflowing on the all vendor categories page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,12 @@
+/*FIXING MARGIN LINE*/
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 /*IMAGES*/
 #loginimage{
